; ModuleID = '/home/carl/AnghaBench/linux/drivers/thermal/tegra/extr_soctherm.c_thermal_irq_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thermal/tegra/extr_soctherm.c_thermal_irq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_thermctl_zone = type { %struct.TYPE_3__*, %struct.TYPE_4__* }
%struct.TYPE_3__ = type { i32, i64 }
%struct.TYPE_4__ = type { i32 }

@THERMCTL_INTR_ENABLE = common dso_local global i64 0, align 8
@TH_INTR_UP_DN_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_thermctl_zone*)* @thermal_irq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @thermal_irq_enable(%struct.tegra_thermctl_zone* %0) #0 {
  %2 = alloca %struct.tegra_thermctl_zone*, align 8
  %3 = alloca i32, align 4
  store %struct.tegra_thermctl_zone* %0, %struct.tegra_thermctl_zone** %2, align 8
  %4 = load %struct.tegra_thermctl_zone*, %struct.tegra_thermctl_zone** %2, align 8
  %5 = getelementptr inbounds %struct.tegra_thermctl_zone, %struct.tegra_thermctl_zone* %4, i32 0, i32 0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.tegra_thermctl_zone*, %struct.tegra_thermctl_zone** %2, align 8
  %10 = getelementptr inbounds %struct.tegra_thermctl_zone, %struct.tegra_thermctl_zone* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @THERMCTL_INTR_ENABLE, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @readl(i64 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load %struct.tegra_thermctl_zone*, %struct.tegra_thermctl_zone** %2, align 8
  %19 = getelementptr inbounds %struct.tegra_thermctl_zone, %struct.tegra_thermctl_zone* %18, i32 0, i32 1
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @TH_INTR_UP_DN_EN, align 4
  %24 = call i32 @REG_SET_MASK(i32 %17, i32 %22, i32 %23)
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* %3, align 4
  %26 = load %struct.tegra_thermctl_zone*, %struct.tegra_thermctl_zone** %2, align 8
  %27 = getelementptr inbounds %struct.tegra_thermctl_zone, %struct.tegra_thermctl_zone* %26, i32 0, i32 0
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @THERMCTL_INTR_ENABLE, align 8
  %32 = add nsw i64 %30, %31
  %33 = call i32 @writel(i32 %25, i64 %32)
  %34 = load %struct.tegra_thermctl_zone*, %struct.tegra_thermctl_zone** %2, align 8
  %35 = getelementptr inbounds %struct.tegra_thermctl_zone, %struct.tegra_thermctl_zone* %34, i32 0, i32 0
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = call i32 @mutex_unlock(i32* %37)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @REG_SET_MASK(i32, i32, i32) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
